--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     justify-content: center; /* Center horizontally */
     align-items: center;     /* Center vertically */
     min-height: 100vh;
-    background-image: url('images/bulby.jpeg');
+    background-image: url('images/pichu.png');
     background-size: cover;  /* Ensure gradient covers entire background */
     background-repeat: no-repeat; /* No repetition of background image */
     background-position: center;  /* Center the gradient */
@@ -22,7 +22,7 @@ body {
 
 /* Title styling */
 h1 {
-    color: aliceblue;
+    color: black; /* Changed font color to black */
     margin-bottom: 30px; /* Space below the title */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 24px; /* Font size for the title */
@@ -153,4 +153,3 @@ h1 {
 .download-btn:hover {
     background-color: #45a049; /* Darker background on hover */
 }
-
