--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     justify-content: center; /* Center horizontally */
     align-items: center;     /* Center vertically */
     min-height: 100vh;
-    background-image: url('images/pichu.png');
+    background-image: url('Images/pichu.png');
     background-size: cover;  /* Ensure gradient covers entire background */
     background-repeat: no-repeat; /* No repetition of background image */
     background-position: center;  /* Center the gradient */
